--- a/app/src/main/res/xml/activity_main_scene.xml
+++ b/app/src/main/res/xml/activity_main_scene.xml
@@ -26,8 +26,8 @@
             android:layout_height="64dp"
             app:layout_constraintBottom_toBottomOf="@id/image"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="@id/image"
-            app:layout_constraintTop_toTopOf="@id/image" />
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </ConstraintSet>
 
 
